force-app/main/default/objects/Charket__WeChatQRCode__c/Charket__WeChatQRCode__c.object-meta.xml
<CustomObject>
    <label>WeChat QR Code</label>
    <nameField>
        <label>WeChat QR Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WeChat QR Code</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>