force-app/main/default/objects/Charket__WeChatQRCode__c/fields/Charket__ExistingFollowerScanCount__c.field-meta.xml
<CustomField>
    <fullName>Charket__ExistingFollowerScanCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Scanned By Existing Followers</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>