force-app/main/default/objects/Charket__WeChatQRCode__c/fields/Charket__ExpirationSeconds__c.field-meta.xml
<CustomField>
    <fullName>Charket__ExpirationSeconds__c</fullName>
    <label>Expiration Seconds</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>