force-app/main/default/objects/Charket__WeChatQRCode__c/fields/Charket__Scene__c.field-meta.xml
<CustomField>
    <fullName>Charket__Scene__c</fullName>
    <label>Scene</label>
    <length>255</length>
    <type>Text</type>
</CustomField>