force-app/main/default/objects/Charket__WeChatQRCode__c/fields/Charket__Type__c.field-meta.xml
<CustomField>
    <fullName>Charket__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Temporary</fullName>
                <default>true</default>
                <label>Temporary</label>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>